[gd_scene load_steps=16 format=3 uid="uid://dw3ob2c7lbqck"]

[ext_resource type="Texture2D" uid="uid://sxjcwrdb6sxq" path="res://assets/sprites/coins.png" id="1_iil8x"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="1_ip500"]
[ext_resource type="FontFile" uid="uid://caychdyvfmi3s" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3_sud7e"]

[sub_resource type="Animation" id="Animation_knaw2"]
resource_name = "hide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(4, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -100)]
}

[sub_resource type="Animation" id="Animation_kwyg1"]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(0, -100), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oek3t"]
_data = {
"hide": SubResource("Animation_knaw2"),
"show": SubResource("Animation_kwyg1")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_ltxjg"]
atlas = ExtResource("1_iil8x")
region = Rect2(0, 0, 64, 64)

[sub_resource type="Animation" id="Animation_4ybe2"]
resource_name = "challenge"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Rect2(128, 0, 64, 64), Rect2(128, 64, 64, 64), Rect2(128, 128, 64, 64), Rect2(128, 192, 64, 64)]
}

[sub_resource type="Animation" id="Animation_1macm"]
resource_name = "hidden"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 0, 64, 64), Rect2(0, 64, 64, 64), Rect2(0, 128, 64, 64), Rect2(0, 192, 64, 64)]
}

[sub_resource type="Animation" id="Animation_gckg8"]
resource_name = "puzzle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Rect2(64, 0, 64, 64), Rect2(64, 64, 64, 64), Rect2(64, 128, 64, 64), Rect2(64, 192, 64, 64)]
}

[sub_resource type="Animation" id="Animation_hch1w"]
resource_name = "tiny"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Rect2(192, 0, 64, 64), Rect2(192, 64, 64, 64), Rect2(192, 128, 64, 64), Rect2(192, 192, 64, 64)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sggae"]
_data = {
"challenge": SubResource("Animation_4ybe2"),
"hidden": SubResource("Animation_1macm"),
"puzzle": SubResource("Animation_gckg8"),
"tiny": SubResource("Animation_hch1w")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_bsw0y"]
atlas = ExtResource("1_iil8x")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_36arx"]
atlas = ExtResource("1_iil8x")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rte3s"]
atlas = ExtResource("1_iil8x")
region = Rect2(192, 64, 64, 64)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_ip500")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Coins" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -100.0
offset_bottom = -16.0
grow_horizontal = 2
alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Coins"]
libraries = {
"": SubResource("AnimationLibrary_oek3t")
}

[node name="DisplayTimer" type="Timer" parent="Control/Coins"]
wait_time = 3.0
one_shot = true

[node name="UpdateTimer" type="Timer" parent="Control/Coins"]
one_shot = true

[node name="Hidden" type="VBoxContainer" parent="Control/Coins"]
layout_mode = 2
alignment = 1

[node name="Coin" type="TextureRect" parent="Control/Coins/Hidden"]
layout_mode = 2
texture = SubResource("AtlasTexture_ltxjg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Coins/Hidden/Coin"]
libraries = {
"": SubResource("AnimationLibrary_sggae")
}
autoplay = "hidden"

[node name="Amount" type="Label" parent="Control/Coins/Hidden"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_sud7e")
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 1

[node name="Puzzle" type="VBoxContainer" parent="Control/Coins"]
layout_mode = 2
alignment = 1

[node name="Coin" type="TextureRect" parent="Control/Coins/Puzzle"]
layout_mode = 2
texture = SubResource("AtlasTexture_bsw0y")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Coins/Puzzle/Coin"]
libraries = {
"": SubResource("AnimationLibrary_sggae")
}
autoplay = "puzzle"

[node name="Amount" type="Label" parent="Control/Coins/Puzzle"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_sud7e")
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 1

[node name="Challenge" type="VBoxContainer" parent="Control/Coins"]
layout_mode = 2
alignment = 1

[node name="Coin" type="TextureRect" parent="Control/Coins/Challenge"]
layout_mode = 2
texture = SubResource("AtlasTexture_36arx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Coins/Challenge/Coin"]
libraries = {
"": SubResource("AnimationLibrary_sggae")
}
autoplay = "challenge"

[node name="Amount" type="Label" parent="Control/Coins/Challenge"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_sud7e")
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 1

[node name="Tiny" type="VBoxContainer" parent="Control/Coins"]
layout_mode = 2
alignment = 1

[node name="Coin" type="TextureRect" parent="Control/Coins/Tiny"]
layout_mode = 2
texture = SubResource("AtlasTexture_rte3s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Coins/Tiny/Coin"]
libraries = {
"": SubResource("AnimationLibrary_sggae")
}
autoplay = "tiny"

[node name="Amount" type="Label" parent="Control/Coins/Tiny"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_sud7e")
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 1

[connection signal="timeout" from="Control/Coins/DisplayTimer" to="." method="_on_display_timer_timeout"]
[connection signal="timeout" from="Control/Coins/UpdateTimer" to="." method="_on_timer_timeout"]
